Fix style and layout issues

--- a/style.css
+++ b/style.css
@@ -2,7 +2,10 @@ body {
     height: 100vh;
     height: 100svh;
     margin: 0px;
+    background-color: white;
     font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px;
+    font-weight: normal;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -17,9 +20,6 @@ body {
 .header {
     display: flex;
     justify-content: space-between;
-    font-weight: bold;
-    font-size: 24px;
-    color: #F9FAF8; 
 }
 
 ul {
@@ -28,77 +28,57 @@ ul {
     margin: 0;
     padding: 0;
     gap: 20px;
+    font-weight: normal;
 }
 
 a {
     text-decoration: none;
-    font-weight: normal;
-    font-size: 18px;
-    color: #e5e7eb;
 }
 
 .title-container {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     padding: 80px 0;
-    gap: 40px;
+    flex-wrap: wrap;
 }
 
 .title-text {
-    text-align: left;
+    flex-basis: 500px;
 }
 
 .main-text {
     font-size: 48px;
     font-weight: 900;
-    color: #F9FAF8;
 }
 
 .secondary-text {
-    font-size: 18px;
-    font-weight: normal;
-    color: #e5e7eb;
     margin-bottom: 12px;
 }
 
 button {
     padding: 8px 32px;
     border-radius: 8px;
-    font-weight: bold;
-    font-size: 18px;
 }
 
 button.first {
     background: #3882f6;
     border: 2px solid #3882f6;
-    color: white;
 }
 
 button.right {
     background: #3882f6;
     border: 2px solid white;
-    color: white;
 }
 
 #cover-img {
-    width: 800px;
+    width: 450px;
     height: 200px;
 }
 
-.info-container {
-    background-color: white;
-}
 .info-header {
-    font-size: 36px;
     font-weight: 900;
-    color: #1F2937;
     padding: 32px 0;
-}
-
-.img-text {
-    font-size: 18px;
-    font-weight: normal;
-    color: #1F2937;
 }
 
 .cards {
@@ -107,6 +87,7 @@ button.right {
     align-items: flex-start;
     gap: 48px;
     padding-bottom: 64px;
+    flex-wrap: wrap;
 }
 
 .info>img {
@@ -130,17 +111,11 @@ button.right {
 }
 
 .quote-text {
-    font-size: 36px;
     font-weight: 100;
     font-style: italic;
-    color: #1F2937;
-    text-align: left;
 }
 
 .quote-ref {
-    font-size: 18px;
-    font-weight: bold;
-    color: #1F2937;
     text-align: right;
     padding-right: 48px;
 }
@@ -153,30 +128,42 @@ button.right {
     align-items: center;
     padding: 32px 72px;
     border-radius: 8px;
-}
-
-.left {
-    text-align: left;
-}
-
-.action-header {
-    font-weight: bold;
-    color: white;
-    font-size: 24px;
-}
-
-.action-text {
-    font-weight: normal;
-    font-size: 18px;
-    color: #F9FAF8; 
+    flex-wrap: wrap;
 }
 
 .footer {
     background-color:#1F2937;
     padding: 32px 0;
-    font-size: 18px;
-    color: #e5e7eb;
-    font-weight: normal;
 }
 
+.header, .action-header {
+    font-size: 24px;
+}
 
+.info-header, .quote-text {
+    font-size: 36px;
+}
+
+a, .secondary-text, .footer {
+    color: #e5e7eb;
+}
+
+.header, .main-text, .action-text {
+    color: #F9FAF8;
+}
+
+button.first, button.right, .action-header {
+    color: white;
+}
+
+.info-header, .img-text, .quote-text, .quote-ref {
+    color: #1F2937;
+}
+
+.header, button, .quote-ref, .action-header {
+    font-weight: bold;
+}
+
+.title-text, .quote-text, .left {
+    text-align: left;
+}
